# Swave

./: .gitignore  README.md
.soroban/identity/: swave-deployer-new.toml  swave-deployer.toml  swave-new-deployer.toml
backend/: Cargo.toml
backend/contracts/collateral/: Cargo.toml
backend/contracts/collateral/src/: lib.rs
backend/contracts/credit-score/: Cargo.toml
backend/contracts/credit-score/src/: lib.rs
backend/contracts/fee-manager/: Cargo.toml
backend/contracts/fee-manager/src/: lib.rs
backend/contracts/liquidity/: Cargo.toml
backend/contracts/liquidity/src/: lib.rs
backend/contracts/loan/: Cargo.toml
backend/contracts/loan/src/: lib.rs
backend/contracts/multisig/: Cargo.toml
backend/contracts/multisig/src/: lib.rs
backend/contracts/oracle/: Cargo.toml
backend/contracts/oracle/src/: lib.rs
backend/contracts/storage-manager/: Cargo.toml
backend/contracts/storage-manager/src/: lib.rs
backend/contracts/swap/: Cargo.toml
backend/contracts/swap/src/: lib.rs
backend/deployed/: contract-addresses.json  network-config.json
backend/scripts/: build.sh  deploy.sh  init.sh
backend/tests/integration/: collateral_tests.rs  credit_tests.rs  fee_tests.rs  liquidity_tests.rs  loan_tests.rs  mod.rs  swap_tests.rs
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.jsx
frontend/src/app/analytics/: page.jsx
frontend/src/app/api/contract-analysis/: route.js
frontend/src/app/api/user-analytics/: route.js
frontend/src/app/components/: BackgroundPaths.jsx  FreighterInstallGuide.jsx  GlowingEffect.jsx  GlowingGridDemo.jsx  Header.jsx  PulseBeams.jsx  StarBorderButton.jsx  SwapInterface.jsx  TestnetDemo.jsx  ThemeRegistry.jsx  Threads.jsx  ThreadsDemo.jsx
frontend/src/app/explore/: page.jsx
frontend/src/app/lib/: contractService.js  dataService.js  stellarTestnetService.js  swapRouter.js  tokenService.js  utils.js  walletService.js
frontend/src/app/liquidity/: page.jsx
frontend/src/app/loans/: page.jsx
frontend/src/app/swap/: page.jsx
frontend/src/app/testnet-demo/: page.jsx
frontend/src/components/ui/: PulseBeams.jsx  sparkles.js
