[package]
name = "swave-storage-manager"
version = "0.1.0"
edition = "2021"
authors = ["SWAVE Team"]
description = "Automated storage cleanup and optimization smart contract for SWAVE DeFi platform"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.8"

# Time handling for expiry management
chrono = { version = "0.4", default-features = false, features = ["serde"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.8", features = ["testutils"] }

[features]
default = [] 